2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/misc/httpserver/httpfile.py:
	When splitting the MP4 file fails, serve the file from the
	beginning instead of returning a HTTP 500 error.
	* flumotion/test/test_component_httpserver.py:
	Unit test the new behaviour.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/misc/httpserver/httpfile.py:
	Always seek in the provider with MP4 files.
	Sometimes the splitting library can return an offset of 0 and
	the provider still needs to seek.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/test/test_component_httpserver.py:
	Test the MP4 file handling code in the HTTP server component.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/misc/httpserver/httpfile.py:
	Add a subclass for handling MP4 files. Implement handling of
	the start GET parameter, tailored after the Apache
	mod_h264_streaming module.
	The handling requires an external Python library mp4seek.

	* flumotion/component/misc/httpserver/httpserver.py:
	Create MP4File resources for video/mp4 files.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/misc/httpserver/httpfile.py:
	Allow do_prepareBody to return a deferred, that can fire with
	a string. That string will get written to the request before
	further processing.
	Write the header when seeking in FLV files just before
	attaching the producerConsumerProxy, not immediately after the
	seek. If there's an error in later on, we could end up
	returning the FLV header and a HTTP 500 response code to the
	client.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/misc/httpserver/httpfile.py:
	Augment comments and docstrings to better explain what the
	code is doing.
